Lab8-TrafficIngress/loan/devsecops-marketing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devsecops
  name: devsecops-marketing-deployment
  labels:
    app.kubernetes.io/name: devsecops-marketing
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: devsecops-marketing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devsecops-marketing
        app.kubernetes.io/version: 1.0.0
    spec:
      containers:
      - name: devsecops-blue
        image: timpamungkas/devsecops-marketing:1.0.0
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "0.3"
            memory: 128M
        ports:
        - name:  http
          containerPort: 8222
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /marketing/actuator/health/readiness
            port: 8222
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /marketing/actuator/health/liveness
            port: 8222
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1
 
---
 
apiVersion: v1
kind: Service
metadata:
  namespace: devsecops
  name: devsecops-marketing-clusterip
  labels:
    app.kubernetes.io/name: devsecops-marketing
spec:
  selector:
    app.kubernetes.io/name: devsecops-marketing
  type: ClusterIP
  ports:
  - port: 8222
