Lab8-TrafficIngress/loan/service-loan-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devsecops
  name: devsecops-loan-clusterip
  labels:
    app.kubernetes.io/name: devsecops-loan
spec:
  selector:
    app.kubernetes.io/name: devsecops-loan
  type: ClusterIP
  ports:
  - port: 8111
