Lab8-TrafficIngress/loan/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devsecops
  name: devsecops-ingress-nginx
  labels:
    app.kubernetes.io/name: devsecops-ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/load-balance: "round_robin"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /loan
        pathType: Prefix
        backend:
          service:
            name: devsecops-loan-clusterip
            port:
              number: 8111
      - path: /marketing
        pathType: Prefix
        backend:
          service:
            name: devsecops-marketing-clusterip
            port:
              number: 8222
